project for Tolyatti

--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -25,7 +25,7 @@
                 <value>to_cdw@codeworks.by</value>
             </setting>
             <setting name="ImgPath" serializeAs="String">
-                <value>D:\Распечатка наклеек\LOG2.BMP</value>
+                <value />
             </setting>
         </WindowsFormsApplication.Properties.Settings>
     </userSettings>
