много не доработок и мы  блиски к успеху

--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -5,11 +5,7 @@
             <section name="WindowsFormsApplication.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <connectionStrings>
-        <add name="WindowsFormsApplication.Properties.Settings.invConnectionString"
-            connectionString="Data Source=mn-adpc01\SQLEXPRESS;Initial Catalog=inv;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    <connectionStrings />
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
@@ -26,6 +22,9 @@
             </setting>
             <setting name="ImgPath" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="SqlDataBase" serializeAs="String">
+                <value>TestDB</value>
             </setting>
         </WindowsFormsApplication.Properties.Settings>
     </userSettings>
