--- a/WindowsFormsApplication/Properties/Settings.settings
+++ b/WindowsFormsApplication/Properties/Settings.settings
@@ -2,14 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="WindowsFormsApplication.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="invConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=mn-adpc01\SQLEXPRESS;Initial Catalog=inv;Integrated Security=True&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=mn-adpc01\SQLEXPRESS;Initial Catalog=inv;Integrated Security=True</Value>
-    </Setting>
     <Setting Name="SqlServer" Type="System.String" Scope="User">
       <Value Profile="(Default)">mn-mssql01</Value>
     </Setting>
@@ -21,6 +13,9 @@
     </Setting>
     <Setting Name="ImgPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="SqlDataBase" Type="System.String" Scope="User">
+      <Value Profile="(Default)">TestDB</Value>
     </Setting>
   </Settings>
 </SettingsFile>
