navigation and settings.

--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -26,6 +26,12 @@
             <setting name="SqlDataBase" serializeAs="String">
                 <value>TestDB</value>
             </setting>
+            <setting name="int_navigation" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="inr_barcod" serializeAs="String">
+                <value>0</value>
+            </setting>
         </WindowsFormsApplication.Properties.Settings>
     </userSettings>
 </configuration>
