--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -32,6 +32,117 @@
             <setting name="inr_barcod" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="mainForms_mainTB_date" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_mainTB_TypeAC" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_mainTB_InvNum" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_mainTB_LanName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_mainTB_ResName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_mainTB_Room" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_mainTB_Floor" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_mainTB_TypeDiv" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_mainTB_SN" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_mainTB_Model" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_mainTB_WrittenOff" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_mainTB_JiraTask" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_mainTB_Reason" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_hardware_date" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_hardware_InvNum" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_hardware_LanName" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_hardware_ResName" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_hardware_Room" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_hardware_Floor" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_hardware_TypeDiv" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_hardware_SN" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_hardware_Model" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_hardware_WrittenOff" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_hardware_JiraTask" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_hardware_Reason" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_hardware_ID" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_mainTB_ID" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_stockroom_ID" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_stockroom_date" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_stockroom_InvNum" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_stockroom_TypeDiv" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_stockroom_Quantity" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_stockroom_SN" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_stockroom_Model" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_stockroom_WrittenOff" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mainForms_stockroom_JiraTask" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_stockroom_Reason" serializeAs="String">
+                <value>False</value>
+            </setting>
         </WindowsFormsApplication.Properties.Settings>
     </userSettings>
 </configuration>
