--- a/WindowsFormsApplication/WORK_DB_INVENTORY.csproj
+++ b/WindowsFormsApplication/WORK_DB_INVENTORY.csproj
@@ -125,6 +125,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL_Buttoms.cs" />
+    <Compile Include="BLL_Search.cs" />
+    <Compile Include="DAL_SEARCH.cs" />
+    <Compile Include="DAL_SET_Buttons.cs" />
     <Compile Include="Delete.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,6 +157,12 @@
       <DependentUpon>JBD.cs</DependentUpon>
     </Compile>
     <Compile Include="LDAPAuthentication.cs" />
+    <Compile Include="Search.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Search.Designer.cs">
+      <DependentUpon>Search.cs</DependentUpon>
+    </Compile>
     <Compile Include="Send_mail.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -224,6 +234,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Search.resx">
+      <DependentUpon>Search.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Send_mail.resx">
       <DependentUpon>Send_mail.cs</DependentUpon>
     </EmbeddedResource>
