--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -143,6 +143,51 @@
             <setting name="mainForms_stockroom_Reason" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="setDataBase_mainTB_ID" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="setDataBase_mainTB_date" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="setDataBase_mainTB_TypeAC" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="setDataBase_mainTB_InvNum" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="setDataBase_mainTB_LanName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="setDataBase_mainTB_ResName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="setDataBase_mainTB_Room" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="setDataBase_mainTB_Floor" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="setDataBase_mainTB_TypeDiv" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="setDataBase_mainTB_SN" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="setDataBase_mainTB_Model" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="setDataBase_mainTB_WrittenOff" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="setDataBase_mainTB_JiraTask" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="setDataBase_mainTB_Reason" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="print_name_or_model" serializeAs="String">
+                <value>0</value>
+            </setting>
         </WindowsFormsApplication.Properties.Settings>
     </userSettings>
 </configuration>
