--- a/WindowsFormsApplication/WORK_DB_INVENTORY.csproj
+++ b/WindowsFormsApplication/WORK_DB_INVENTORY.csproj
@@ -26,7 +26,7 @@
     <UpdateUrl>\\mn-mssql01\AppInv\publishKiev\</UpdateUrl>
     <ProductName>invKiev</ProductName>
     <PublisherName>Zimburavi©</PublisherName>
-    <ApplicationRevision>5</ApplicationRevision>
+    <ApplicationRevision>10</ApplicationRevision>
     <ApplicationVersion>0.1.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -127,6 +127,12 @@
   <ItemGroup>
     <Compile Include="BLL_Buttoms.cs" />
     <Compile Include="BLL_Search.cs" />
+    <Compile Include="change.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="change.Designer.cs">
+      <DependentUpon>change.cs</DependentUpon>
+    </Compile>
     <Compile Include="DAL_SEARCH.cs" />
     <Compile Include="DAL_SET_Buttons.cs" />
     <Compile Include="Delete.cs">
@@ -209,6 +215,9 @@
     <Compile Include="WriteOffTable.Designer.cs">
       <DependentUpon>WriteOffTable.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="change.resx">
+      <DependentUpon>change.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Delete.resx">
       <DependentUpon>Delete.cs</DependentUpon>
     </EmbeddedResource>
