--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -188,6 +188,48 @@
             <setting name="print_name_or_model" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="changeFormTwo_mainTB_ID" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_date" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_TypeAC" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_InvNum" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_LanName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_ResName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_Room" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_Floor" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_TypeDiv" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_SN" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_Model" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_WrittenOff" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_JiraTask" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_Reason" serializeAs="String">
+                <value>True</value>
+            </setting>
         </WindowsFormsApplication.Properties.Settings>
     </userSettings>
 </configuration>
