логика на мелочь

--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -230,6 +230,117 @@
             <setting name="changeFormTwo_mainTB_Reason" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Search_hardware_ID" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_hardware_date" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_hardware_InvNum" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_hardware_LanName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_hardware_ResName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_hardware_Room" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_hardware_Floor" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_hardware_TypeDiv" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_hardware_SN" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_hardware_Model" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_hardware_WrittenOff" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_hardware_JiraTask" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_hardware_Reason" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_mainTB_ID" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_date" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_TypeAC" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_InvNum" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_LanName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_ResName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_Room" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_Floor" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_TypeDiv" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_SN" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_Model" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_WrittenOff" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_JiraTask" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_Reason" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_stockroom_ID" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_stockroom_date" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_stockroom_InvNum" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_stockroom_Quantity" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_stockroom_TypeDiv" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_stockroom_SN" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_stockroom_Model" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_stockroom_WrittenOff" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Search_stockroom_JiraTask" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_stockroom_Reason" serializeAs="String">
+                <value>False</value>
+            </setting>
         </WindowsFormsApplication.Properties.Settings>
     </userSettings>
 </configuration>
